--- a/style.css
+++ b/style.css
@@ -16,7 +16,10 @@
 
     /*Size*/
     --size-border-radius: 4px;
-}
+
+    /*animation*/
+    --animation-duration: 300ms;
+}   
 /*Universal tags*/
 *{
     box-sizing: border-box;
@@ -51,7 +54,7 @@ h1{
     margin: 16px 0px;
 }
 h2{
-    font-size: var(--font-regular);
+    font-size: var(--font-medium);
     font-weight: var(--weight-semi-bold);
     color: var(--color-black);
     margin: 8px 0;
@@ -102,6 +105,15 @@ p{
     background-color: greenyellow;
 
 }
+.navbar__toggle-btn{
+    color:white;
+    position:absolute;
+    top:4px;
+    right:32px;
+    font-size:24px;
+    display:none;
+
+}
 
 /*Home*/
 #home{
@@ -125,24 +137,43 @@ p{
 
 /*Section common*/
 .section{
-    padding: 50px;
-    text-align:center;
+    text-align: center;
+    padding:50px;
+    max-width:1200px;
+    margin:auto; 
+}
+.section__containterZ{
     max-width:1200px;
     margin:auto;
 }
-
-.section__container{
-    max-width:1200px;
-    margin: auto;
-}
-
 /*About*/
 .about__majors{
-    display:flex;
-    justify-content:space-between;
+    display: flex;
+    justify-content: space-between;
     margin:80px 0;
 }
 
+.major__icon{
+    width:170px;
+    height:170px;
+    line-height: 170px;
+    font-size:70px;
+    margin: auto;
+    color:skyblue;
+    border:1px solid blueviolet;
+    border-radius:50%;
+    margin-bottom: 16px;
+}
+.major__icon i{
+    transition:all 300ms ease;
+}
+.major__icon:hover i {
+    color:springgreen;
+    transform: rotate(-30deg) scale(1.2);
+}
+.degree__description{
+    color:dimgray;
+}
 /*Skill*/
 
 #skill{
@@ -154,6 +185,7 @@ p{
     display:flex;
     margin:20px 0;
 }
+
 .skillset__left{
     flex-basis:60%;
     background-color: chocolate;
@@ -171,6 +203,7 @@ background-color: burlywood;
 .skill__description{
     display:flex;
     justify-content: space-between;
+    color:black;
 }
 .skill__bar{
     width:100%;
@@ -181,4 +214,152 @@ background-color: burlywood;
     width:100%;
     height:3px;
     background-color:black;
+}
+
+/*Work*/
+.work__categories{
+ margin:40px;
+}
+
+.category__btn{
+    border: 1px solid black;
+    border-radius: 4px;
+    font-size: var(--font-regular);
+    padding: 8px 48px;
+}
+
+.category__btn.active,
+.category__btn:hover{
+    background-color: tomato;
+    color:bisque;
+}
+
+.category__btn.active .category__count,
+.category__btn:hover .category__count{
+    opacity: 1;
+    top: 0;
+}
+.category__count{
+    background-color: darkgreen;
+    border:1px solid;
+    border-radius:50%;
+    color:white;
+    width:24px;
+    height:24px;
+    line-height:24px;
+    display:inline-block;
+    position:relative;
+    top:-20px;
+    left:4px;
+    opacity: 0;
+    transition:all var(--animaiton-duration) ease-in;
+}
+
+.work__projects{
+    display: flex;
+    flex-wrap:wrap;
+    justify-content: center;
+}
+.project{
+    position:relative;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width:280px;
+    height:250px;
+    margin:2px;
+    background-color: lightwhite;
+}
+
+.project__image{
+    max-width:100%;
+    max-height:100%;
+}
+.project__description{
+    position:absolute;
+    background-color:black;
+    width:100%;
+    height:100%;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    top:0;
+    left:0;
+    opacity:0;
+    transform: translateY(10px);
+    transition: all var(--animaiton-duration) ease-in;
+}
+.project:hover .project__description{
+    opacity:0.8;
+}
+.project__description h3,span{
+    color:white;
+}
+.project__description h3,span:after {
+    transition: all var(--animaiton-duration) ease-in;
+}
+
+
+/*wise-saying*/
+#wise-saying{
+    background-color: antiquewhite;
+}
+.famous__person__saying{
+    display:flex;
+    margin:32px 0;
+
+}
+.movie{
+    width:150px;
+    height:150px;
+    border-radius: 50%;
+    margin:10px;
+}
+
+/*Contact*/
+#contact{
+    background-color: gold;    
+}
+.contact i{
+    color:black;
+}
+.contact__title{
+ margin:32px 0;
+}
+.phrase{
+    padding:18px;
+    background-color: white;
+}
+
+/*For below 768px screen width*/
+@media screen and (max-width:768px){
+    .navbar__toggle-btn{
+        display: block;
+    }
+    #navbar{
+        flex-direction: column;
+        align-items:flex-start;
+    }
+    .navbar__menu{
+        flex-direction: column;
+        text-align:center;
+        width:100%;
+        display:none;
+    }
+    .about__majors{
+        flex-direction: column;
+    }
+    .major{
+        margin-bottom: 38px;
+    }
+    .skillset{
+        flex-direction: column;
+    }
+    .project{
+        flex-grow:1
+    }
+    .movie{
+        width:80px;
+        height:80px;
+    }
 }
