--- a/style.css
+++ b/style.css
@@ -74,7 +74,9 @@ p{
     margin: 4px 0;
 }
 
-
+nav{
+    padding:0px;
+}
 /*Navbar*/
 #navbar{
     position:fixed;
@@ -102,12 +104,11 @@ p{
     margin: 0px 4px;
     cursor: pointer;
     border-radius:var(--size-border-radius);
-}
-.navbar__menu__item.active{
-    border:1px solid white;
+    border: 1px solid transparent;
 }
 
 .navbar__menu__item:hover{
+    border: 1px solid white;
     background-color: greenyellow;
 
 }
@@ -228,6 +229,7 @@ background-color: burlywood;
 /*Work*/
 .work__categories{
  margin:40px;
+ position:relative;
 }
 
 .category__btn{
@@ -249,25 +251,30 @@ background-color: burlywood;
     top: 0;
 }
 .category__count{
-    background-color: darkgreen;
-    border:1px solid;
-    border-radius:50%;
+    background-color: orange;
+    border-style: 1px solid;
+    border-radius: 50%;
     color:white;
     width:24px;
     height:24px;
     line-height:24px;
     display:inline-block;
+    opacity:0;
     position:relative;
-    top:-20px;
-    left:4px;
-    opacity: 0;
-    transition:all var(--animaiton-duration) ease-in;
+    left:15px;    
+    transition: ease-in;
 }
 
 .work__projects{
     display: flex;
     flex-wrap:wrap;
     justify-content: center;
+    opacity:1;
+    transition: 3s ease-out;
+}
+.work__projects.anim-out{
+    opacity:0;
+    transform: scale(0.96) translateY(40px);
 }
 .project{
     position:relative;
@@ -279,7 +286,9 @@ background-color: burlywood;
     margin:2px;
     background-color: lightwhite;
 }
-
+.project.invisible{
+    display:none;
+}
 .project__image{
     max-width:100%;
     max-height:100%;
@@ -338,6 +347,26 @@ background-color: burlywood;
 .phrase{
     padding:18px;
     background-color: white;
+}
+
+/*Scroll*/
+.arrow-up{
+    position:fixed;
+    bottom:50px;
+    right:50px;
+    font-size:50px;
+    color:white;
+    background-color: pink;
+    border-radius:50%;
+    width:70px;
+    height:70px;
+    opacity:0;
+    transition: opacity 300ms ease-in;
+    pointer-events: none;
+}
+.arrow-up.visible{
+    opacity:1;
+    pointer-events: auto;
 }
 
 /*For below 768px screen width*/
